define infra installation playbook and set main

--- a/roles/infradeploy/tasks/main.yml
+++ b/roles/infradeploy/tasks/main.yml
@@ -1,34 +1,3 @@
 ---
 # tasks file for infradeploy
-- name: "Setting Security Groups"
-  local_action:
-    module: ec2_group
-    name: "{{ SG_NAME }}"
-    description: "AWS SG Default Group - IT.BR"
-    region: "{{ AWS_REGION }}"
-    rules:
-      - proto: tcp
-        ports:
-        - 22
-        - 80
-        cidr_ip: 0.0.0.0/0
-        rule_desc: allow all on port 22 and  80 
-    rules_egress:
-      - proto: all
-        cidr_ip: 0.0.0.0/0
-        # description to use if example-other needs to be created
-        group_desc: "Egress rule Firewall - IT.BR"
-  register: basic_firewall
-
-- name: "Creating AWS Instances"
-  local_action:
-    module: ec2
-    key_name: mykey
-    instance_type: t2.micro
-    image: ami-123456
-    wait: yes
-    group: webserver
-    count: 3
-    vpc_subnet_id: subnet-29e63245
-    assign_public_ip: yes 
-
+- include: install_infra.yml
