--- a/roles/infradeploy/tasks/install_infra.yml
+++ b/roles/infradeploy/tasks/install_infra.yml
@@ -19,31 +19,18 @@
   register: basic_firewall
 
 - name: "Creating AWS Instances"
-  local_action:
-    module: ec2
+  ec2:
+    region: "{{ AWS_REGION }}"
     key_name: "{{ KEYPAIR_NAME }}"
     instance_type: "{{ INSTANCE_TYPE }}"
     image: "{{ AMI_IMAGE }}"
     wait: yes
-    group: "{{ INSTANCE_GROUP }}"
+    group: "{{ SG_NAME }}"
     count: "{{ INSTANCES_NUMBER }}"
     # assign_public_ip: yes 
-  register: ec2.logs.create
+  register: ec2
 
-- name: "Creating Temp Inventory"
-  add_host:
-    name: "{{ item.public_ip }}" 
-    groups: itbr-aws-instances
-  with_items: "{{ ec2.intances }}"
-  
-- name: Generate Dinamic Inventory 
-  lineinfile:
-      path: "./hosts"
-      regexp: "{{ item.public_ip }}"
-      insertafter: '[itbr-aws-instances]'
-      line: "{{ item.public_ip }}"
-  with_items: "{{ ec2.instances }}"
-
+# - debug: msg="{{ ec2 }}"
 
 - name: Wait Instances get Ready
   wait_for: 
@@ -52,6 +39,21 @@
       state: started
   with_items: "{{ ec2.instances }}"  
 
+
+- name: "Creating Temp Inventory"
+  add_host:
+    name: "{{ item.public_ip }}" 
+    groups: itbr-aws-instances
+  with_items: "{{ ec2.instances }}"
+  
+- name: Generate Dinamic Inventory 
+  lineinfile:
+    path: "hosts"
+    regexp: "{{ item.public_ip }}"
+    insertafter: '\[itbr-aws-instances\]'
+    line: "{{ item.public_ip }}"
+  with_items: "{{ ec2.instances }}"
+
 - name: Setting Instance TAG 
   ec2_tag:
     region: "{{ AWS_REGION }}"
@@ -59,5 +61,4 @@
     state: present
     tags:
       Name: ITBR-INFRA
-  with_items: "{{ ec2.instance }}"
-      
+  with_items: "{{ ec2.instances }}"
