--- a/group_vars/all/srv-vars.yml
+++ b/group_vars/all/srv-vars.yml
@@ -1,6 +1,7 @@
 SG_NAME: "ITBR-DEMO"
 AWS_REGION: "ap-southeast-2"
-AMI_IMAGE: "ami-0975ce566eec139c3"
+# AMI_IMAGE: "ami-0975ce566eec139c3"
+AMI_IMAGE: "ami-07cc15c3ba6f8e287"
 INSTANCE_TYPE: "t2.micro"
 INSTANCE_GROUP: "ITBR-INFRA-DEMO"
 INSTANCES_NUMBER: 1  
