--- a/roles/web/tasks/install_httpd.yml
+++ b/roles/web/tasks/install_httpd.yml
@@ -1,27 +1,12 @@
 ---
 # These tasks install http and the php modules.
 
-# - name: Deploy SSH Key
-#   authorized_key: 
-#     user: ec2-user
-#     key: "{{ lookup('file', 'itbr-demousr.pem') }}"
-#     state: present
 
 - name: Install http and php etc
   yum: 
     name: ['httpd', 'php', 'php-mysql',
-'git', 'python3-libsemanage', 'python3-libselinux']
+'git', 'libsemanage-python', 'libselinux-python']
     state: present
-  
-- name: insert iptables rule for httpd
-  lineinfile: 
-   dest: /etc/sysconfig/iptables 
-   create: yes 
-   state: present 
-   regexp: "{{ httpd_port }}" 
-   insertafter: "^:OUTPUT "
-   line: "-A INPUT -p tcp  --dport {{ httpd_port }} -j  ACCEPT"
-  notify: restart iptables
 
 - name: http service state
   service: 
@@ -29,9 +14,9 @@
     state: started
     enabled: yes
 
-- name: Configure SELinux to allow httpd to connect to remote database
-  seboolean: 
-    name: httpd_can_network_connect_db 
-    state: true 
-    persistent: yes
-  when: sestatus.rc != 0
+# - name: Configure SELinux to allow httpd to connect to remote database
+#   seboolean: 
+#     name: httpd_can_network_connect_db 
+#     state: true 
+#     persistent: yes
+# #   when: sestatus.rc != 0
